# CytoProcess

./: Dockerfile  MANIFEST.in  README.md  install.ps1  install.sh  local.sh  pyproject.toml  setup.py  uninstall.ps1  uninstall.sh
.github/workflows/: build.yml
extra_tools/: README.md
src/CytoProcess/: convert.py  main.py  mapping.py
src/cytosense_to_ecotaxa_pipeline/: main.py  mapping.py
tests/: transform_function_test.py
