[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CytoProcess"
dynamic = ["version"]
description = "A pipeline to import Cytosense data into Ecotaxa"
authors = [{name = "Sebastien Galvagno", email = "sebastien.galvagno@imev-mer.fr"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'six',
    'matplotlib',
    'Pillow',
    'numpy',
    'requests'
]

[project.scripts]
CytoProcess = "CytoProcess.pipeline:main_cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["CytoProcess"]

[tool.setuptools.package-data]
"CytoProcess" = [
    "bin/*",
    "*.py"
]

[tool.setuptools_scm]